--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+
+.vscode
+
+# sensitive data
+keys.txt
+mongodb.txt
+
+## Template starts here
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
