--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,10 @@
 .vscode
 
 # sensitive data
-keys.txt
-mongodb.txt
+#keys.txt
+#mongodb.txt
 
 ## Template starts here
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -136,3 +135,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.DS_Store
